--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.0.0",
+    "@next/mdx": "^12.0.10",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
