--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/mdx": "^12.0.10",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
