--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
     "next": "12.0.10",
