--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark-prism": "^1.3.6"
@@ -22,7 +22,7 @@
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.0.10",
+    "eslint-config-next": "^12.1.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
