--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
+    "@vanilla-extract/next-plugin": "^2.0.1",
+    "acorn": "^8.7.0",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
