--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/mdx": "^12.0.10",
     "@vanilla-extract/next-plugin": "^2.0.1",
     "acorn": "^8.7.0",
+    "gray-matter": "^4.0.3",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
