--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-prism": "^1.3.6"
   },
   "devDependencies": {
