--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vanilla-extract/next-plugin": "^2.0.1",
     "acorn": "^8.7.0",
     "gray-matter": "^4.0.3",
+    "marked": "^4.0.12",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
