--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@docsearch/react": "^3.0.0-alpha.50",
     "@heroicons/react": "^1.0.5",
     "@mdx-js/loader": "^2.0.0",
     "@next/mdx": "^12.0.10",
@@ -18,6 +19,7 @@
     "marked": "^4.0.12",
     "next": "^12.1.0",
     "next-sitemap": "^2.4.5",
+    "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark-gfm": "^3.0.1",
