📝 Work on the getting-started doc

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,11 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
-.yarn
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
