--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@docusaurus/preset-classic": "latest",
     "@docusaurus/remark-plugin-npm2yarn": "latest",
     "@mdx-js/react": "^1.6.21",
-    "@react-native-material/core": "^1.3.1",
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "rn-material": "^1.3.7"
   },
   "browserslist": {
     "production": [
